# Favorit

./: .gitignore  CMakeLists.txt  README.md  package.json  run_widget.bat
.github/workflows/: pages.yml
docs/: .pages-refresh.txt  index.html  robots.txt  sitemap.xml  styles.css
settings-ui/FavoriteWidget.Settings/: App.xaml  App.xaml.cs  FavoriteWidget.Settings.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
settings-ui/FavoriteWidget.Settings/Models/: FavoriteModels.cs
settings-ui/FavoriteWidget.Settings/Services/: IniFavoriteService.cs
src/: main.cpp  model.hpp  search.cpp  search.hpp  storage.cpp  storage.hpp  ui_assets.cpp  ui_assets.hpp  utils.cpp  utils.hpp  windows.cpp  windows.hpp
tools/: generate_icons.mjs
tools/test/: Dockerfile  Dockerfile.playwright  crop_screenshots.py  playwright-audit.mjs  run_pages_docker.ps1
wiki/: Home.md  Service-Roadmap.md
